chore: fix the card style as with the percentage, everything was getting out of place.

--- a/src/pages/User/Appointment/Appointment.css
+++ b/src/pages/User/Appointment/Appointment.css
@@ -12,5 +12,5 @@
 }
 
 .appointmentRow{
-    height: 56vh;
+    height: 60vh;
 }
