--- a/src/pages/User/SeeAppointment/SeeAppointment.css
+++ b/src/pages/User/SeeAppointment/SeeAppointment.css
@@ -1,9 +1,14 @@
+.bga{
+  background-color: #00828c;
+  height: 60vh;
+}
+
 .appointmentDesign{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #00828c;
+    
     font-family: "Myfont";
 } 
 
@@ -15,7 +20,8 @@
 }
 
 .seeCard{
-    width: 30%;
+    width: 280px; 
+    height: auto; 
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
