--- a/src/pages/User/SeePet/SeePet.css
+++ b/src/pages/User/SeePet/SeePet.css
@@ -1,20 +1,32 @@
+.bgn{
+  background-color: #00828c;
+  height: 60vh;
+}
+
 .seePetDesign {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #00828c;
     font-family: "Myfont";
+  
+  }
+
+  .petCardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-basis: 49%;
   }
   
 
   .petCard {
-    width: 30%;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    transition: transform 0.3s ease;
+  width: 280px; 
+  height: auto; 
+  margin: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
 
   }
 
@@ -23,12 +35,7 @@
     transform: scale(1.05);
   } 
   
-  .petCardContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-basis: 49%;
-  }
+  
 
   
 
@@ -36,7 +43,6 @@
     .petCardContainer {
       flex-direction: column;
     }
-
     .petCard {
         width: 70vw;
         margin: 10px;
